--- a/card/index.html
+++ b/card/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Card presenation</title>
+  <title>Card presentation</title>
   <script type="module" src="./generate.js"></script>
   <link rel="stylesheet" href="./style.css" />
   <link rel="icon" href="./pic.png" />
